    KDE4 defaults.
14. Fix firefox crashing when scrollbar slider move to top. This only occurs
    when not using flat scrollbar buttons, and a coloured scrollbar slider.
15. Dont draw frame around GEdits combos in its status bar - unless
    drawStatusBarFrames is set to true.
16. Dont attempt alter OK/Cancel button for Firefox 3.5 - seems to mess up
    preferences dialog.

0.63.0
------
 1. Add '3dfull' to gradient border options. This forces the
    dark, as well as the light, portion to be drawn.
 2. Use a lighter shade for the dark portion of gradient border.
 3. Flat dot for radio buttons.
 4. Option to use button colour for listview headers.
 5. Use KDE4 colors for focus and mouse-over.
 6. Removal of background focus option.
 7. Softer, and much nicer, colouration of selected tab.
 8. Tab mouse over options; top (as before), below, or glow.
 9. Modified defaults:
     Tab mouse-over highlight drawn at the bottom
     Plain slider style
     Align titlebars text in center
10. Add appearance setting for background of flat scrollbar buttons.
11. Add HCY colour space.
12. Use tint and mix color routines from KDE4's KColorUtils.
13. Remove QtCurve's 'inactiveHighlight' option, and use KDE4s setting
    instead.
14. Add option to specify appearance setting of filler part of sliders.
15. Increase number of custom gradients - now matches number of gradient
    config items.
16. When using glow style mouse over, use mouse over colour for arrows.
17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
18. Option to only color sliders on mouse over.
19. Option to round all tabs.
20. Better tab highlighting.
21. Don't max/extra round progressbars.
22. Use faded lines for tab and listview header mouse-over.
23. Create icon-mapping file in a more robust manner.
24. Set "gtk-icon-theme-name" to user's theme (or the KDE default if not set),
    and set "gtk-fallback-icon-theme" to "highcolor". This seems to map more icons.